--- a/views/tasks/index.pug
+++ b/views/tasks/index.pug
@@ -1,9 +1,8 @@
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title tareas
-    body
-        ul
-            each task in tasks
-                li= task.description
+doctype html
+html
+  head
+    title Tareas
+  body
+    ul
+      each task in tasks
+        li= task.description
