--- a/views/tasks/edit.pug
+++ b/views/tasks/edit.pug
@@ -5,5 +5,6 @@ html(lang="en")
         title Tareas
     body
         form(action=`/tasks/${task.id}?_method=PUT` method="POST")
+            input(type="text" name="categories" placeholder="ID de categorias separados por coma")
             textarea(name="description", placeholder="Coloca aqui el pendiente a realizar")= task.description
             input(type="submit" value="Guardar")
